# pywisetransfer

./: .gitignore  Dockerfile  README.md  pyproject.toml  pyproject.toml.old  requirements.txt  shell.py  tox.ini
.github/workflows/: docs.yml  lint.yml  publish-release.yml  publish-tag.yml  test-and-publish.yml  test.yml
docs/: api.rst  conf.py  index.rst
googleapi/: cloud_storage_api.py
pytransferwise/: __init__.py  base.py  borderless_account.py  profile.py  rates.py  sca.py  subscription.py  user.py  webhooks.py
pywisetransfer/: __init__.py  __main__.py  account_details.py  balance_statements.py  balances.py  base.py  borderless_account.py  cli.py  client.py  currency.py  default.pem  deprecation.py  endpoint.py  exceptions.py  keys.py  multi_currency_account.py  profile.py  quote.py  recipient_account.py  sandbox_simulation.py  signing.py  subscription.py  transfer.py  user.py  webhooks.py
pywisetransfer/model/: __init__.py  account.py  account_requirement_type.py  annotations.py  base.py  country.py  country_codes.py  currency.py  enum.py  error.py  fund.py  legal_type.py  payment.py  profile.py  quote.py  recipient.py  requirement_type.py  requirements.py  timestamp.py  transfer.py  uuid.py
pywisetransfer/test/: __init__.py  conftest.py  public.pem  record.py  test-sca.pem  test_base.py  test_client_live.py  test_client_sandbox.py  test_currency.py  test_deprecation.py  test_json_endpoint.py  test_model_examples.py  test_profile.py  test_quote.py  test_recipient_account_requirements.py  test_recipient_accounts.py  test_sandbox_api.py  test_sca.py  test_timestamp.py  test_transfer.py  test_uuid.py  test_webhooks.py  test_with_doctest.py
test/: conftest.py  test_account_details.py  test_base.py  test_client_live.py  test_client_sandbox.py  test_deprecation.py  test_get_account_statement.py  test_profile.py  test_sca.py  test_transfer.py  test_uuid.py  test_webhooks.py
test/responses/: offset.yaml  transfers.yaml
wise_banking_api_client/: __init__.py  __main__.py  account_details.py  balance_statements.py  balances.py  base.py  borderless_account.py  cli.py  client.py  currency.py  endpoint.py  exceptions.py  multi_currency_account.py  profile.py  quote.py  recipient_account.py  sandbox_simulation.py  signing.py  subscription.py  transfer.py  user.py  version.py  webhooks.py
wise_banking_api_client/model/: __init__.py  account.py  account_requirement_type.py  country_codes.py  currency.py  enum.py  legal_type.py  payment.py  profile.py  quote.py  requirements.py  transfer.py
wise_banking_api_client/test/: __init__.py  conftest.py  record.py  test_base.py  test_client_live.py  test_client_sandbox.py  test_currency.py  test_deprecation.py  test_json_endpoint.py  test_model_examples.py  test_profile.py  (+10 more)
(+30 files in other folders)
