[project]
name = "pywisetransfer"
version = "0.3.4.2"
description = "Python library for the TransferWise API"
authors = [
  { name = "James Addison", email = "jay@jp-hosting.net" }
]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["payments", "transferwise"]
requires-python = ">3.9.1"
dependencies = [
  "apiron (>=9.0.0,<10)",
  "munch (>=4.0.0,<5)",
  "cryptography (>=45.0.0,<46)"
]

[project.optional-dependencies]
dev = [
  "black (>=25.1.0,<26)",
  "munch-stubs (>=0.1.2,<0.2)",
  "pytest (>=8.3.4,<9)",
  "responses (>=0.25.0,<0.26)",
  "types-cryptography (>=3.3.23.2,<3.4)"
]

[project.urls]
homepage = "https://www.github.com/jayaddison/pywisetransfer"
repository = "https://www.github.com/jayaddison/pywisetransfer"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
